--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ background: '/img/bg-index.jpg'
       <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">O nás</a>
     </div>
     <div class="col-md-6 text-right pl-0 pl-lg-4">
-      <img class="intro" height="500" src="{{site.baseurl}}/assets/images/intro.svg">      
+      <img class="intro" height="500" src="{{site.baseurl}}/assets/images/logo_UPJS.png">      
     </div>
   </div>
 </div>
