--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,15 +6,17 @@ comments: false
 ---
 
 <form action="https://formspree.io/{{site.email}}" method="POST">    
-<p class="mb-4">Thank you for your interest in getting in touch with us. Please send your message here. We will reply as soon as possible!</p>
+<p class="mb-4">Kontaktovať nás môžete kedykoľvek.</p>
+ <p class="mb-4">E-mail: hkupjske@gmail.com </p>
+  
 <div class="form-group row">
 <div class="col-md-6">
-<input class="form-control" type="text" name="name" placeholder="Name*" required>
+<input class="form-control" type="text" name="name" placeholder="Meno*" required>
 </div>
 <div class="col-md-6">
 <input class="form-control" type="email" name="_replyto" placeholder="E-mail Address*" required>
 </div>
 </div>
-<textarea rows="8" class="form-control mb-3" name="message" placeholder="Message*" required></textarea>    
-<input class="btn btn-dark" type="submit" value="Send">
+<textarea rows="8" class="form-control mb-3" name="message" placeholder="Správa*" required></textarea>    
+<input class="btn btn-dark" type="submit" value="Poslať">
 </form>
