--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,8 +7,8 @@ comments: false
 
 <form action="https://formspree.io/{{site.email}}" method="POST">    
 <p class="mb-4">Kontaktovať nás môžete kedykoľvek.</p>
- <p class="mb-4">E-mail: hkupjske@gmail.com </p>
-  
+<p class="mb-4">E-mail: hkupjske@gmail.com </p>
+<p class="mb-4">Nájdete nás na: Ondavská 21, 040 11 Košice </p> 
 <div class="form-group row">
 <div class="col-md-6">
 <input class="form-control" type="text" name="name" placeholder="Meno*" required>
