--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ background: '/img/bg-index.jpg'
       <h1 class="font-weight-bold mb-4 serif-font">Horolezecký klub UPJŠ Košice</h1>
       <p class="lead mb-4">Vitajte na našej stránke</p>
       <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">O nás</a>
+      <a href="https://www.facebook.com/groups/619173268163674" class="btn btn-dark text-white px-5 btn-lg">Pridaj sa k nám</a>
     </div>
     <div class="col-md-6 text-right pl-0 pl-lg-4">
       <img class="intro" height="500" src="{{site.baseurl}}/assets/images/logo_UPJS.png">      
