--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,17 +6,9 @@ comments: false
 ---
 
 <form action="https://formspree.io/{{site.email}}" method="POST">    
-<p class="mb-4">Kontaktovať nás môžete kedykoľvek.</p>
+<p class="mb-4">Kontakt na nás:</p>
 <p class="mb-4">E-mail: hkupjske@gmail.com </p>
-<p class="mb-4">Nájdete nás na: Ondavská 21, 040 11 Košice </p> 
-<div class="form-group row">
-<div class="col-md-6">
-<input class="form-control" type="text" name="name" placeholder="Meno*" required>
-</div>
-<div class="col-md-6">
-<input class="form-control" type="email" name="_replyto" placeholder="E-mail Address*" required>
-</div>
-</div>
-<textarea rows="8" class="form-control mb-3" name="message" placeholder="Správa*" required></textarea>    
-<input class="btn btn-dark" type="submit" value="Poslať">
-</form>
+<p class="mb-4">Telefón: +421 918 554 061 </p>
+<p class="mb-4">Nájdete nás na: Ondavská 21, 040 11 Košice </p>
+<p class="mb-4">[FB skupina](https://www.facebook.com/groups/619173268163674)</p>
+<p class="mb-4">[FB stránka](https://www.facebook.com/HKupjsKE)</p>
