--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,10 +5,9 @@ permalink: "/contact/"
 comments: false
 ---
 
-<form action="https://formspree.io/{{site.email}}" method="POST">    
-<p class="mb-4">Kontakt na nás:</p>
-<p class="mb-4">E-mail: hkupjske@gmail.com </p>
-<p class="mb-4">Telefón: +421 918 554 061 </p>
-<p class="mb-4">Nájdete nás na: Ondavská 21, 040 11 Košice </p>
-<p class="mb-4">[FB skupina](https://www.facebook.com/groups/619173268163674)</p>
-<p class="mb-4">[FB stránka](https://www.facebook.com/HKupjsKE)</p>
+Kontakt na nás:
+E-mail: hkupjske@gmail.com 
+Telefón: +421 918 554 061 
+Nájdete nás na: Ondavská 21, 040 11 Košice 
+[FB skupina](https://www.facebook.com/groups/619173268163674)
+[FB stránka](https://www.facebook.com/HKupjsKE)
